    Saxena via sjlee)

    YARN-3862. Support for fetching specific configs and metrics based on
    prefixes (Varun Saxena via sjlee)

    YARN-4356. Ensure the timeline service v.2 is disabled cleanly and has no
    impact when it's turned off. (Sangjin Lee via gtcarrera9)

    YARN-4445. Unify the term flowId and flowName in timeline v2 codebase. 
    (Zhan Zhang via gtcarrera9). 

  OPTIMIZATIONS

  BUG FIXES

    YARN-3377. Fixed test failure in TestTimelineServiceClientIntegration.
    (Sangjin Lee via zjshen)

    YARN-3562. unit tests failures and issues found from findbug from earlier
    ATS checkins (Naganarasimha G R via sjlee)

    YARN-3634. TestMRTimelineEventHandling and TestApplication are broken. (
    Sangjin Lee via junping_du)

    YARN-3726. Fix TestHBaseTimelineWriterImpl unit test failure by fixing its
    test data (Vrushali C via sjlee)

    YARN-3721. build is broken on YARN-2928 branch due to possible dependency
    cycle (Li Lu via sjlee)

    YARN-3792. Test case failures in TestDistributedShell and some issue fixes
    related to ATSV2 (Naganarasimha G R via sjlee)

    YARN-3908. Fixed bugs in HBaseTimelineWriterImpl. (Vrushali C and Sangjin
    Lee via zjshen)

    YARN-3993. Changed to use the AM flag in ContainerContext determine AM
    container in TestPerNodeTimelineCollectorsAuxService. (Sunil G via zjshen)

    YARN-3984. Adjusted the event column key schema and avoided missing empty
    event. (Vrushali C via zjshen)

    YARN-4064. build is broken at TestHBaseTimelineWriterImpl.java (sjlee)

    YARN-4058. Miscellaneous issues in NodeManager project (Naganarasimha G R
    via sjlee)

    YARN-4178. [storage implementation] app id as string in row keys can cause
    incorrect ordering (Varun Saxena via sjlee)

    YARN-4297. TestJobHistoryEventHandler and TestRMContainerAllocator failing
    on YARN-2928 branch (Varun Saxena via sjlee)

    YARN-4450. TestTimelineAuthenticationFilter and TestYarnConfigurationFields